<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/addlocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="30dp"
            android:gravity="center"
            android:text="Add Location" />

        <Button
            android:id="@+id/addLocationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="Add location" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter city name"
            android:layout_marginHorizontal="20dp"
            android:completionThreshold="1"
            android:inputType="text"
            android:popupBackground="@drawable/dropdown_bg"/>

        <Button
            android:id="@+id/seeMatches"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:text="See Matches" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>