...

        <!-- Title Text -->
        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="Weather"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <!-- City Name Text -->
...
            </TableRow>

        </TableLayout>

        <!-- Button for Insights -->
        <Button
            android:id="@+id/generateInsights"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="Weather Insights"
            android:layout_marginTop="16dp"
            android:padding="12dp"
...
